--- a/scss/components/form/_form.scss
+++ b/scss/components/form/_form.scss
@@ -25,6 +25,12 @@
     }
   }
 
+  .checkboxes {
+    @include flex-center-vert;
+    gap: length(8);
+    flex-wrap: wrap;
+  }
+
   .erroricon {
     position: absolute;
     top: 50%;
