--- a/scss/components/form/_form.scss
+++ b/scss/components/form/_form.scss
@@ -81,6 +81,18 @@
       display: block;
     }
 
+    .checkfield {
+      .checklabel {
+        &::before {
+          border-color: $danger;
+        }
+
+        &::after {
+          background: transparent;
+        }
+      }
+    }
+
     .select-dropdown {
       .selected-item {
         border-color: $danger;
