--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -871,7 +871,7 @@ button {
   font-size: 0.875rem;
   font-weight: 600;
   line-height: 1.71429;
-  padding: 0.75rem 2.5rem;
+  padding: 0.3125rem 1.25rem;
   border-radius: 0.25rem;
   border-radius: 0.25rem;
   -webkit-transition: background 250ms ease-in-out;
@@ -891,7 +891,7 @@ button {
   font-size: 0.875rem;
   font-weight: 600;
   line-height: 1.71429;
-  padding: 0.75rem 2.5rem;
+  padding: 0.3125rem 1.25rem;
   border: solid 0.0625rem #8b93a7;
   border-radius: 0.25rem;
   border-radius: 0.25rem;
@@ -4314,7 +4314,7 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page
   font-weight: normal;
   line-height: 1.33333;
   position: relative;
-  padding-left: 1.5rem;
+  padding-left: 1.625rem;
   cursor: pointer;
 }
 
@@ -4325,8 +4325,8 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page
   left: 0;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
-  height: 1rem;
-  width: 1rem;
+  height: 1.125rem;
+  width: 1.125rem;
   background: white;
   border: solid 0.0625rem #d1d4dc;
   border-radius: 100%;
@@ -4341,8 +4341,8 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page
   left: 0.25rem;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
-  height: 0.5rem;
-  width: 0.5rem;
+  height: 0.625rem;
+  width: 0.625rem;
   background: white;
   border-radius: 100%;
   opacity: 0;
@@ -4478,6 +4478,14 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page
 
 .inputbox.errorfield .errormessage {
   display: block;
+}
+
+.inputbox.errorfield .checkfield .checklabel::before {
+  border-color: #fc5a5a;
+}
+
+.inputbox.errorfield .checkfield .checklabel::after {
+  background: transparent;
 }
 
 .inputbox.errorfield .select-dropdown .selected-item {
@@ -5239,69 +5247,6 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page
   height: 100%;
 }
 
-.productinfo-body .productdetail .productimages-body .upload {
-  background: rgba(164, 180, 242, 0.1);
-  border-radius: 0.25rem;
-  border-radius: 0.25rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 0.75rem;
-  padding: 0.625rem;
-  border: dashed 0.125rem #a6b5f2;
-  height: 100%;
-  text-align: center;
-  overflow: hidden;
-}
-
-.productinfo-body .productdetail .productimages-body .upload .icon {
-  height: 2.75rem;
-  width: 2.75rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  overflow: hidden;
-}
-
-.productinfo-body .productdetail .productimages-body .upload .icon svg {
-  width: 100%;
-  height: 100%;
-}
-
-.productinfo-body .productdetail .productimages-body .upload .uploadinfo .uploadlabel {
-  color: #333333;
-  font-family: "Inter";
-  font-style: normal;
-  font-size: 0.75rem;
-  font-weight: normal;
-  line-height: 1.33333;
-  cursor: pointer;
-}
-
-.productinfo-body .productdetail .productimages-body .upload .uploadinfo .uploadlabel .text {
-  color: #4a65ed;
-}
-
-.productinfo-body .productdetail .productimages-body .upload.errorfield {
-  border-color: #fc5a5a;
-}
-
 .productinfo-body .productdetail .deliverycharge {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -5502,6 +5447,69 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page
           justify-content: flex-end;
 }
 
+.upload {
+  background: rgba(164, 180, 242, 0.1);
+  border-radius: 0.25rem;
+  border-radius: 0.25rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 0.75rem;
+  padding: 0.625rem;
+  border: dashed 0.125rem #a6b5f2;
+  height: 100%;
+  text-align: center;
+  overflow: hidden;
+}
+
+.upload .icon {
+  height: 2.75rem;
+  width: 2.75rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow: hidden;
+}
+
+.upload .icon svg {
+  width: 100%;
+  height: 100%;
+}
+
+.upload .uploadinfo .uploadlabel {
+  color: #333333;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 0.75rem;
+  font-weight: normal;
+  line-height: 1.33333;
+  cursor: pointer;
+}
+
+.upload .uploadinfo .uploadlabel .text {
+  color: #4a65ed;
+}
+
+.upload.errorfield {
+  border-color: #fc5a5a;
+}
+
 .inputbox .review {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -5531,7 +5539,7 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page
   font-weight: normal;
   line-height: 1.33333;
   position: relative;
-  padding-left: 1.5rem;
+  padding-left: 1.625rem;
   cursor: pointer;
 }
 
@@ -5542,8 +5550,8 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page
   left: 0;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
-  height: 1rem;
-  width: 1rem;
+  height: 1.125rem;
+  width: 1.125rem;
   background: white;
   border: solid 0.0625rem #d1d4dc;
   border-radius: 100%;
@@ -5558,8 +5566,8 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page
   left: 0.25rem;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
-  height: 0.5rem;
-  width: 0.5rem;
+  height: 0.625rem;
+  width: 0.625rem;
   background: white;
   border-radius: 100%;
   opacity: 0;
@@ -6232,6 +6240,56 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page
 
 .select-dropdown ul li:last-child {
   border-bottom: 0;
+}
+
+.horizontal-form .inputbox .product-thumbnail {
+  height: 8.125rem;
+  width: 8.125rem;
+  overflow: hidden;
+  position: relative;
+}
+
+.horizontal-form .inputbox .product-thumbnail .btn-delete {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+}
+
+.horizontal-form .inputbox .product-thumbnail img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.horizontal-form .inputbox .upload {
+  height: 8.125rem;
+  width: 8.125rem;
+  overflow: hidden;
+}
+
+.horizontal-form .inputbox .inputdata {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 0.5rem;
+}
+
+.horizontal-form .inputbox .erroricon {
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+@media screen and (min-width: 48rem) {
+  .horizontal-form .inputbox .erroricon {
+    -webkit-transform: translateY(-105%);
+    transform: translateY(-105%);
+  }
 }
 
 /**=======================================================**
