--- a/scss/pages/forms/_forms.scss
+++ b/scss/pages/forms/_forms.scss
@@ -165,6 +165,47 @@
 }
 
 
+.horizontal-form {
+  .inputbox {
+    .product-thumbnail {
+      @include square(length(130));
+      overflow: hidden;
+      position: relative;
+
+      .btn-delete {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 100;
+      }
+      
+      img {
+        @include wh100;
+        object-fit: cover;
+      }
+    }
+
+    .upload {
+      @include square(length(130));
+      overflow: hidden;
+      // @include border(solid, 1, red);
+    }
+
+    .inputdata {
+      @include flex-column;
+      gap: length(8);
+    }
+
+    .erroricon {
+      @include transform(translateY(-50%));
+
+      @include breakpoint(mobile768) {
+        @include transform(translateY(-105%));
+      }
+    }
+  }
+}
+
 /**=======================================================**
                           FORMS END
 **=======================================================**/
