--- a/scss/components/table/_table.scss
+++ b/scss/components/table/_table.scss
@@ -43,9 +43,9 @@ table.dataTable {
           margin-inline: auto;
         }
 
-        &:first-child {
-          // @include flex-center;
-        }
+        // &:first-child {
+        //   // @include flex-center;
+        // }
       }
     }
   }
